@@ -1,0 +1,8 @@
+mytickets               = My Tickets
+
+new_ticket.button       = New ticket
+no_tickets.label        = There are no open tickets assigned to me
+ticket_number.label     = There is 1 open ticket assigned to me
+tickets_number.label    = There are %d open tickets assigned to me
+show_all_my_tickets.button  = Show all my open tickets
+last_opened_tickets.label   = Last opened tickets:
