@@ -1,0 +1,8 @@
+mytickets               = I miei Ticket
+
+new_ticket.button       = Nuovo ticket
+no_tickets.label        = Non ci sono ticket aperti assegnati a me
+ticket_number.label     = C'è 1 ticket aperto assegnato a me
+tickets_number.label    = Ci sono %d ticket aperti assegnati a me
+show_all_my_tickets.button  = Mostra tutti i ticket aperti assegnati a me
+last_opened_tickets.label   = Ultimi ticket aperti:
